tests/snapshots/cli__hdf5__tree.snap
---
source: tests/cli.rs
expression: "plain(&[])"
---
Checkpoint Explorer - [FIXTURE] (1/1)                                                                 [×]
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
▾ [FIXTURE] (▦ 23, 988 params, 2.0 KiB → 1.2 KiB)
  ▸ 🔧 Metadata (▦ 0, 0 B)
  · lm_head.weight [F16, (10, 4), 80 B → 27 B (⇩ gzip)]
  ▾ model (▦ 22, 2.0 KiB → 1.2 KiB)
    · embed_tokens.weight [F16, (10, 4), 80 B → 27 B (⇩ gzip)]
    ▸ layers (≡ 3, ▦ 19, 1.9 KiB → 1.2 KiB)
    · norm.weight [F32, (4), 16 B (uncompressed)]
    · scale.i8 [I8, (8), 8 B → 16 B (⇩ gzip)]

























↑/↓ navigate · ←/→ parent/child · Shift+↑/↓ sibling · PgUp/PgDn page · Enter open · Tab files · Space/: commands
E/C all · / search · l legend · h health · s stats · c copy screen · t copy tree · f copy file · n copy name
y copy command · ⌫/\ back/fwd · r repack · q quit
 ▸ tests/fixtures
                                                                                                              read-only
