tests/snapshots/cli__hdf5__values_edges.snap
---
source: tests/cli.rs
expression: "plain(&[\"--tensor\", &t, \"--values\"])"
---
Values: model.layers.0.block_sparse_moe.experts.down_proj.weight                                                     [×]
File: [FIXTURE]
U16 as u3×5 (unpacked) (6, 3, 4) as (30, 3, 4) → edges: all 3 of 3 rows × all 4 of 4 cols (indices shown)
mean 0.9667 · std 1.7854 · zeros 69.2%  (<time>)
expert 0 of 30 — stored word 0, field 0/5 (3-bit) — [ ] step · / index or %

        0  1  2  3
     0  0  1  2  3
     1  4  5  6  7
     2  0  1  2  3



























m heatmap · ← → first/last cols · ↑ ↓ first/last rows · +Shift one end · [ ] slice · / index or % · d dtype · r reshape
e window · z zebra: rows · b base: dec · c copy screen · y copy cmd · l legend · Space/: commands · ⌫/\ back/fwd
                                                                                                              read-only
